# the_berliner_search_public

./: .gitignore  README.md  config.yaml  pyproject.toml  queries.txt  requirements.txt
.streamlit/: config.toml
berliner/: cli.py  cliComands.md
berliner/chunker/: make_chunks.py
berliner/extractor/: engines.py  parse.py  utils.py
berliner/metadata/: tagger.py
berliner/search/: bm25.py  embedder.py  expand.py  indexer.py
berliner/summarizer/: export_md.py  summarize.py
berliner/ui/: app_streamlit.py  app_streamlit_beforesidebar.py  app_streamlit_demo.py
berliner/utils/: config.py
eval/20251027_171341/rerank_k10_faiss160/: labels.tsv  labels_template.tsv  raw_results.txt
eval/mpnet/: labels.tsv  raw_results.tsv
eval_scripts/: eval_search.py  fix_labels_header.py  run_eval.py  score_eval.py
