[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-berliner-search"
version = "0.0.1"
description = "The Berliner Search (internal tools)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["berliner*"]
